# TmuxBar

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TMUXBAR_SPEC.md  build.rs
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-10-ux-improvements.md
docs/superpowers/specs/: 2026-04-10-ux-improvements-design.md
resources/: AppIcon.icns  Info.plist  com.tmuxbar.plist
scripts/: bundle.sh
src/: app.rs  i18n.rs  main.rs  models.rs
src/core/: event_logger.rs  fd_alert_policy.rs  inactivity_detector.rs  mod.rs  monitor_service.rs  restart_service.rs  session_manager.rs  snapshot_service.rs
src/infra/: config.rs  config_watcher.rs  instance_lock.rs  launch_agent.rs  log_store.rs  mod.rs  sys_probe.rs  tmux_client.rs
src/ui/: menu_action_handler.rs  menu_bar.rs  mod.rs  notifications.rs  session_menu.rs
