[package]
name = "tmuxbar"
version = "0.1.0"
edition = "2021"
description = "macOS menu bar app for tmux session management"
license = "MIT"
repository = "https://github.com/desgramer/TmuxBar"
readme = "README.md"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSThread", "NSString", "NSArray", "NSDictionary", "NSObject", "NSAttributedString", "NSGeometry", "objc2-core-foundation"] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSStatusBar", "NSStatusItem", "NSMenu", "NSMenuItem", "NSImage", "NSRunningApplication", "NSButton", "NSControl", "NSResponder", "NSStatusBarButton", "NSView", "NSColor", "NSAttributedString", "NSAlert", "NSTextField", "NSWindow"] }
dispatch2 = "0.3"
block2 = "0.6"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
sysinfo = "0.38"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.35", features = ["bundled"] }
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"

[dev-dependencies]
tempfile = "3"
